day-3/elk/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/backend-protocol: HTTPS
 name: kibana-ingress
spec:
 tls: 
 - hosts:
   - kibana.florent-monnet.takima.cloud
   secretName: app-wildcard-student
 rules:
 - host: kibana.florent-monnet.takima.cloud
   http:
     paths:
     - backend:
         service:
           name: kibana-kb-http
           port:
             number: 5601
       path: /
       pathType: Prefix
